# smile-client

./: .gitignore  README.md  config.template.json  requirements.txt  setup.cfg  setup.py
smile_client/: __init__.py  apps.py  cli.py  default_callback.py  smile_client.py
smile_client/management/commands/: run_smile_consumer.py
smile_client/messages/: __init__.py  smile_message.py
