[metadata]
name = smile_client
version = attr: smile_client.version.__version__
author = MSK CMO
author_email = ivkovics@mskcc.org
description = Python Library for SMILE
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/mskcc/smile-client
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.6
install_requires =
    Django==2.2.28
    nats-py==2.10.0
    docopt==0.6.2

[options.entry_points]
console_scripts =
    smile-client = smile_client.cli:main